welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ab is already defined as variable ab
                                           var ab = ac - 10;
                                                       ^